--- a/index.html
+++ b/index.html
@@ -189,6 +189,23 @@
                     </div>
                 </div>
             </div>
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.png'>">
+                <img class="img-fluid" src="img/carousel-3.png" alt="">
+                <div class="owl-carousel-inner">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-10 col-lg-8">
+                                <h1 class="display-1 text-white animated slideInDown">We believe in Brand Loyalty and
+                                    Trust in Business</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Call us now to know more from the experts
+                                    and have a better idea about your perfect needs for your requirements.</p>
+                                <a href="#enquiry" class="btn btn-primary py-3 px-5 animated slideInLeft">Book a
+                                    Call</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -279,7 +296,7 @@
             <div class="row g-4 justify-content-center">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-1.jpg" alt="">
+                        <img class="bg-img" src="img/service-1-aleco-windows.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-5.png" alt="Icon">
                             <h3 class="mb-3">UPVC Doors & Windows</h3>
@@ -291,7 +308,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-2.jpg" alt="">
+                        <img class="bg-img" src="img/service-2-aleco-windows.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-6.png" alt="Icon">
                             <h3 class="mb-3">Everest Max System</h3>
@@ -304,7 +321,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-3.jpg" alt="">
+                        <img class="bg-img" src="img/service-3-aleco-windows.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-7.png" alt="Icon">
                             <h3 class="mb-3">Aluminium Doors & Windows</h3>
@@ -316,7 +333,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-4.jpg" alt="">
+                        <img class="bg-img" src="img/service-4-aleco-windows.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-8.png" alt="Icon">
                             <h3 class="mb-3">Railings and Internal Partitions</h3>
@@ -328,7 +345,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-5.jpg" alt="">
+                        <img class="bg-img" src="img/service-5-aleco-windows.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-9.png" alt="Icon">
                             <h3 class="mb-3">Facades</h3>
