--- a/project.html
+++ b/project.html
@@ -259,21 +259,25 @@
             <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="col-lg-4">
                     <div class="nav nav-pills d-flex justify-content-between w-100 h-100 me-4">
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4 active"
+                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-2 active"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
                             <h3 class="m-0">01. Mount litera Zee school Amritsar</h3>
                         </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4"
+                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-2"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-2" type="button">
                             <h3 class="m-0">02. Excelsum High School Amritsar</h3>
                         </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4"
+                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-2"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-3" type="button">
                             <h3 class="m-0">03. Hotel sadka Amritsar</h3>
                         </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-0"
+                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-2"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-4" type="button">
-                            <h3 class="m-0">04. Nirava City Amritsar</h3>
+                            <h3 id="enquiry" class="m-0">04. Worldwide Group (Mahindra)</h3>
+                        </button>
+                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-0"
+                            data-bs-toggle="pill" data-bs-target="#tab-pane-5" type="button">
+                            <h3 id="enquiry" class="m-0">05. Nirvana City Amritsar</h3>
                         </button>
                     </div>
                 </div>
@@ -342,6 +346,29 @@
                             </div>
                         </div>
                         <div class="tab-pane fade" id="tab-pane-4">
+                            <div class="row g-4">
+                                <div class="col-md-6" style="min-height: 350px;">
+                                    <div class="position-relative h-100">
+                                        <img class="position-absolute img-fluid w-100 h-100"
+                                            src="img/worldwide-group.jpg" style="object-fit: cover;" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <h1 class="mb-3">Best in Class Designs</h1>
+                                    <p class="mb-4">Our windows are designed with precision and attention to detail to
+                                        complement the architectural style of your home, adding a touch of elegance and
+                                        sophistication. Our commitment to quality is reflected in every aspect of our
+                                        products and services, from the selection of raw materials to the installation
+                                        process. <br><br>Choose the best in class UPVC windows design for your home and
+                                        experience the benefits of superior performance, aesthetics and value. </p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Quality materials</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Experienced team</p>
+                                    <!-- <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="tab-pane-5">
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
